<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/genshin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/character_genshin"
            />

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/genshin"
            android:layout_marginTop="-177dp"
            android:contentDescription="@string/description"
            android:padding="8dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_character"
            android:layout_below="@id/characterImage"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:layout_below="@id/tvName"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:layout_below="@id/textDesc"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/detail_character"
            android:layout_below="@id/tvDescription"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDetail"
            android:layout_marginTop="8dp">

            <!-- Row for Element -->
            <TableRow
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:id="@+id/textElement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvElement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>

            <!-- Row for Nation -->
            <TableRow
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:id="@+id/textNation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nation"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>

            <!-- Row for Gender -->
            <TableRow
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:id="@+id/textGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>

            <!-- Row for Weapon -->
            <TableRow
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:id="@+id/textWeapon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weapon"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWeapon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>

            <!-- Row for Affiliation -->
            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/textAffiliation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/affiliation"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAffiliation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>

            <!-- Row for Constellation -->
            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/textConstellation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constellation"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvConstellation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>

            <!-- Row for Birthday -->
            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/textBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>

            <!-- Row for Rarity -->
            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/textRarity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rarity"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRarity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>

            <!-- Row for Role -->
            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/textRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>

            <!-- Row for Special Dish -->
            <TableRow
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                >
                <TextView
                    android:id="@+id/textSpecialDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/special_dish"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSpecialDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>
